[package]
name = "todo-rs"
version = "0.1.0"
authors = ["T Prajwal Prabhu <prajwalprabhu.tellar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.124"
serde_json = "1.0.64"
serde_derive = "1.0.124"
[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]